examples/test/testpolicy16945.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16945
  namespace: namespace480
spec:
  podSelector:
    matchLabels:
      key12: value31
      key35: value3
      key7: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value18
          key49: value14
          key43: value47
      podSelector:
        matchLabels:
          key33: value8
          key26: value6
